fixed side nav not showing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -208,7 +208,7 @@ nav .links a {
   }
   .navbar {
     background-color: var(--nav-colour);
-    top: unset;
+    inset: unset;
     bottom: 0;
     transform: translateY(0);
   }
@@ -226,7 +226,7 @@ nav .links a {
       position: fixed;
       display: flex;
       z-index: 1000;
-      inset: 0 0 0 30%;
+      inset: auto 0 0 30%;
       gap: 2em;
       flex-direction: column;
       padding: min(30vh, 10rem) 2em;
